--- a/com-landingis-api/pom.xml
+++ b/com-landingis-api/pom.xml
@@ -124,6 +124,12 @@
             <version>1.4.2.Final</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok-mapstruct-binding</artifactId>
+            <version>0.2.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
