Create: use jwt-auth and get token

--- a/com-landingis-api/src/main/resources/application-dev.properties
+++ b/com-landingis-api/src/main/resources/application-dev.properties
@@ -16,8 +16,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+jwt.secret=MySuperSecretKeyForJWT1234567890abcdef
+jwt.expiration=86400000
+
 logging.level.org.springframework=DEBUG
-
 spring.main.allow-bean-definition-overriding=true
-
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
