--- a/com-landingis-api/src/main/resources/application-dev.properties
+++ b/com-landingis-api/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.mvc.static-path-pattern=
 
-spring.datasource.url=jdbc:mysql://localhost:3306/student-course
+spring.datasource.url=jdbc:mysql://localhost:3306/edu_central_main
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
