Modify: security-config to by-pass swagger

--- a/com-landingis-api/src/main/resources/application-dev.properties
+++ b/com-landingis-api/src/main/resources/application-dev.properties
@@ -5,6 +5,7 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.mvc.static-path-pattern=
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.datasource.url=jdbc:mysql://localhost:3306/edu_central_main
 spring.datasource.username=root
